# rs-auth

./: Cargo.toml
migrations/2022-10-10-145433_users/: up.sql
src/: error.rs  main.rs  models.rs  schema.rs  utils.rs
src/routes/: auth.rs  register.rs
